--- a/conf/.env
+++ b/conf/.env
@@ -1,2 +1,3 @@
 SHIORI_DBTYPE=mysql
 SHIORI_DSN=__DB_USER__:__DB_PWD__@(localhost)/__DB_NAME__?charset=utf8&parseTime=True&loc=Local
+SHIORI_DIR=__DATADIR__
