--- a/conf/.env
+++ b/conf/.env
@@ -1,3 +1,5 @@
-SHIORI_DBTYPE=mysql
-SHIORI_DSN=__DB_USER__:__DB_PWD__@(localhost)/__DB_NAME__?charset=utf8&parseTime=True&loc=Local
-SHIORI_DIR=__DATADIR__
+SHIORI_DBMS=mysql
+SHIORI_MYSQL_USER=__DB_USER__
+SHIORI_MYSQL_PASS=__DB_PWD__
+SHIORI_MYSQL_NAME=__DB_NAME__
+SHIORI_MYSQL_ADDRESS=127.0.0.1:3306
