--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
     "packaging_format": 1,
     "description": {
         "en": "Simple bookmark manager built with Go",
-        "fr": "Simple bookmark manager built with Go"
+        "fr": "Gestionnaire de liens simple construit avec Go"
     },
     "version": "1.5.0~ynh1",
     "url": "https://github.com/go-shiori/shiori",
@@ -24,7 +24,7 @@
     "requirements": {
         "yunohost": ">= 4.3.0"
     },
-    "multi_instance": false,
+    "multi_instance": true,
     "services": [
         "nginx"
     ],
