--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -8,7 +8,7 @@ Type=simple
 User=__APP__
 Group=__APP__
 WorkingDirectory=__FINALPATH__/
-ExecStart=__FINALPATH__/__APP__ serve --port __PORT__ --db-type mysql --db-dsn __DB_USER__:__DB_PWD__@(localhost)/__DB_NAME__?charset=utf8&parseTime=True&loc=Local
+ExecStart=__FINALPATH__/shiori serve --port __PORT__
 Environment="SHIORI_DIR=__DATADIR__"
 StandardOutput=append:/var/log/__APP__/__APP__.log
 StandardError=inherit
