--- a/manifest.json
+++ b/manifest.json
@@ -3,8 +3,8 @@
     "id": "shiori",
     "packaging_format": 1,
     "description": {
-        "en": "Simple bookmark manager built with Go",
-        "fr": "Gestionnaire de liens simple construit avec Go"
+        "en": "Simple bookmark manager",
+        "fr": "Gestionnaire de liens simple"
     },
     "version": "1.5.0~ynh1",
     "url": "https://github.com/go-shiori/shiori",
@@ -18,7 +18,7 @@
     },
     "license": "MIT",
     "maintainer": {
-        "name": "",
+        "name": "eric_G",
         "email": ""
     },
     "requirements": {
