--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,10 +7,10 @@ After=network-online.target
 Type=simple
 User=__APP__
 Group=__APP__
-WorkingDirectory=__FINALPATH__/
-ExecStart=__FINALPATH__/shiori serve --port __PORT__ --webroot __PATH__
+WorkingDirectory=__INSTALL_DIR__/
+ExecStart=__INSTALL_DIR__/shiori serve --port __PORT__ --webroot __PATH__
 Restart=always
-Environment="SHIORI_DIR=__DATADIR__"
+Environment="SHIORI_DIR=__DATA_DIR__"
 
 # Sandboxing options to harden security
 # Depending on specificities of your service/app, you may need to tweak these 
