--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -9,9 +9,9 @@ location __PATH__/ {
   proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
   proxy_set_header  X-Forwarded-Host $server_name;
   
-  #proxy_http_version 1.1;
-  #proxy_set_header Upgrade $http_upgrade;
-  #proxy_set_header Connection "upgrade";
+  proxy_http_version 1.1;
+  proxy_set_header Upgrade $http_upgrade;
+  proxy_set_header Connection "upgrade";
 
   # Include SSOWAT user panel.
   include conf.d/yunohost_panel.conf.inc;
