--- a/conf/.env
+++ b/conf/.env
@@ -1,4 +1,4 @@
 SHIORI_WEBROOT=__PATH__
-SHIORI_PORT__PORT__
+SHIORI_PORT=__PORT__
 SHIORI_DIR=__DATA_DIR__
 SHIORI_DATABASE_URL="postgres://__DB_USER__:__DB_PWD__@hostname/__DB_NAME__?sslmode=verify-full"
