--- a/conf/.env
+++ b/conf/.env
@@ -2,3 +2,9 @@ ENV_SHIORI_WEBROOT=__PATH__
 ENV_SHIORI_PORT=__PORT__
 ENV_SHIORI_DIR=__DATA_DIR__
 ENV_SHIORI_DATABASE_URL="postgres://__DB_USER__:__DB_PWD__@hostname/__DB_NAME__?sslmode=verify-full"
+
+#SHIORI_DBMS=postgres
+#SHIORI_MYSQL_USER=__DB_USER__
+#SHIORI_MYSQL_PASS=__DB_PWD__
+#SHIORI_MYSQL_NAME=__DB_NAME__
+#SHIORI_MYSQL_ADDRESS=hostname
