--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,10 +7,10 @@ After=network-online.target
 Type=simple
 User=__APP__
 Group=__APP__
+EnvironmentFile="__INSTALL_DIR__/.env"
 WorkingDirectory=__INSTALL_DIR__/
-ExecStart=__INSTALL_DIR__/shiori server --port __PORT__ --webroot __PATH__
+ExecStart=__INSTALL_DIR__/shiori server
 Restart=always
-Environment="SHIORI_DIR=__DATA_DIR__"
 
 [Install]
 WantedBy=multi-user.target
