--- a/tests.toml
+++ b/tests.toml
@@ -12,4 +12,4 @@ test_format = 1.0
     # Commits to test upgrade from
     # -------------------------------
 
-    test_upgrade_from.787885e7.name = "Upgrade from 1.5.4"
+    #test_upgrade_from.787885e7.name = "Upgrade from 1.5.4"
