--- a/conf/systemd.service
+++ b/conf/systemd.service
@@ -7,11 +7,10 @@ After=network-online.target
 Type=simple
 User=__APP__
 Group=__APP__
+EnvironmentFile=__INSTALL_DIR__/.env
 WorkingDirectory=__INSTALL_DIR__/
 ExecStart=__INSTALL_DIR__/shiori server --port __PORT__ --webroot __PATH__
 Restart=always
-Environment="SHIORI_DIR=__DATA_DIR__"
-Environment="SHIORI_HTTP_SECRET_KEY=__KEY__"
 
 ### Depending on specificities of your service/app, you may need to tweak these
 ### .. but this should be a good baseline
